# personal-siem-ir-lab

./: .gitignore  CHANGELOG.md  CLAUDE.md  DISCLAIMER.md  LICENSE  README.md  lab.toml  plan.md  pyproject.toml
attack/: ATTACK-PLAN.md
detections/: DETECTIONS.md
docs/: DECISIONS.md  RUNBOOK.md  THREAT-MODEL.md
docs/superpowers/plans/: 2026-06-27-siem-ir-scaffold-and-cli.md
docs/superpowers/specs/: 2026-06-27-personal-siem-ir-lab-design.md
examples/: coverage-ssh-bruteforce-chain.json  coverage-ssh-bruteforce-chain.md  report-ssh-bruteforce-chain.md
fixtures/: ssh-bruteforce-chain.json
fixtures/rules/: rule_bad_id.xml  rule_malformed.xml  rule_no_group.xml  rule_no_mitre.xml  rule_valid.xml
infra/: NETWORK.md
siem_ir/: __init__.py  attack_map.py  cli.py  coverage.py  report.py  safety.py  validate_rules.py
tests/: test_cli_security.py  test_coverage.py  test_report.py  test_safety.py  test_validate_rules.py
