[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "siem-ir"
version = "0.1.0"
description = "CLI tools for ATT&CK coverage analysis and NIST 800-61 IR report drafting from Wazuh alert fixtures"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["defusedxml>=0.7"]

[project.scripts]
siem-ir = "siem_ir.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
